// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stars /> expect to render value 0 1`] = `
<div
  style={
    Object {
      "color": "",
    }
  }
  styleName="Stars"
>
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
</div>
`;

exports[`<Stars /> expect to render value 3 1`] = `
<div
  style={
    Object {
      "color": "",
    }
  }
  styleName="Stars"
>
  <Star />
  <Star />
  <Star />
  <StarEmpty />
  <StarEmpty />
</div>
`;

exports[`<Stars /> expect to render value 3.5 1`] = `
<div
  style={
    Object {
      "color": "",
    }
  }
  styleName="Stars"
>
  <Star />
  <Star />
  <Star />
  <StarHalf />
  <StarEmpty />
</div>
`;

exports[`<Stars /> expect to render value 5 1`] = `
<div
  style={
    Object {
      "color": "",
    }
  }
  styleName="Stars"
>
  <Star />
  <Star />
  <Star />
  <Star />
  <Star />
</div>
`;

exports[`<Stars /> expect to render value 5 on 10 1`] = `
<div
  style={
    Object {
      "color": "",
    }
  }
  styleName="Stars"
>
  <Star />
  <Star />
  <Star />
  <Star />
  <Star />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
</div>
`;

exports[`<Stars /> expect to render with custom color 1`] = `
<div
  style={
    Object {
      "color": "red",
    }
  }
  styleName="Stars"
>
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
</div>
`;
